ic-canister/ic-canister-macros/tests/export_candid/not_expended/invalid_item_type.stderr
error: expected `fn`
 --> tests/export_candid/not_expended/invalid_item_type.rs:4:1
  |
4 | struct Did {}
  | ^^^^^^
