ic-canister/ic-canister-macros/tests/export_candid/not_expended/invalid_item_type.rs
fn main() {}

#[ic_canister_macros::export_candid]
struct Did {}
